--- a/index.html
+++ b/index.html
@@ -168,12 +168,11 @@
                 <div class="card-body">
                   <div class="d-flex justify-content-between align-items-center">
                     <div>
-                      <h6 class="card-title text-white-50 mb-1">Total Streams</h6>
+                      <h6 class="card-title text-white-50 mb-1">Website</h6>
                       <h3 class="mb-0 text-white fw-bold">1,234</h3>
-                      <small class="text-white-50">+12% from last week</small>
                     </div>
                     <div class="bg-white bg-opacity-20 rounded-circle p-3">
-                      <i class="bi bi-play-circle-fill text-white fs-4"></i>
+                      <i class="bi bi-globe text-white fs-4"></i>
                     </div>
                   </div>
                 </div>
@@ -184,12 +183,11 @@
                 <div class="card-body">
                   <div class="d-flex justify-content-between align-items-center">
                     <div>
-                      <h6 class="card-title text-white-50 mb-1">Active Now</h6>
+                      <h6 class="card-title text-white-50 mb-1">Social Media</h6>
                       <h3 class="mb-0 text-white fw-bold">89</h3>
-                      <small class="text-white-50">+5% from yesterday</small>
                     </div>
                     <div class="bg-white bg-opacity-20 rounded-circle p-3">
-                      <i class="bi bi-broadcast text-white fs-4"></i>
+                      <i class="bi bi-facebook text-white fs-4"></i>
                     </div>
                   </div>
                 </div>
@@ -200,12 +198,11 @@
                 <div class="card-body">
                   <div class="d-flex justify-content-between align-items-center">
                     <div>
-                      <h6 class="card-title text-white-50 mb-1">Total Views</h6>
+                      <h6 class="card-title text-white-50 mb-1">Online</h6>
                       <h3 class="mb-0 text-white fw-bold">45.2K</h3>
-                      <small class="text-white-50">+8% from last month</small>
                     </div>
                     <div class="bg-white bg-opacity-20 rounded-circle p-3">
-                      <i class="bi bi-eye-fill text-white fs-4"></i>
+                      <i class="bi bi-wifi text-white fs-4"></i>
                     </div>
                   </div>
                 </div>
@@ -216,12 +213,11 @@
                 <div class="card-body">
                   <div class="d-flex justify-content-between align-items-center">
                     <div>
-                      <h6 class="card-title text-white-50 mb-1">Revenue</h6>
+                      <h6 class="card-title text-white-50 mb-1">Takedown</h6>
                       <h3 class="mb-0 text-white fw-bold">$12.5K</h3>
-                      <small class="text-white-50">+15% from last month</small>
                     </div>
                     <div class="bg-white bg-opacity-20 rounded-circle p-3">
-                      <i class="bi bi-currency-dollar text-white fs-4"></i>
+                      <i class="bi bi-shield-x text-white fs-4"></i>
                     </div>
                   </div>
                 </div>
@@ -299,31 +295,29 @@
                 <table class="table table-hover mb-0">
                   <thead>
                     <tr>
-                      <th class="fw-semibold">Stream ID</th>
-                      <th class="fw-semibold">Title</th>
+                      <th class="fw-semibold">ID</th>
+                      <th class="fw-semibold">URL</th>
+                      <th class="fw-semibold">Type</th>
+                      <th class="fw-semibold">Matches</th>
                       <th class="fw-semibold">League</th>
                       <th class="fw-semibold">Status</th>
-                      <th class="fw-semibold">Views</th>
                       <th class="fw-semibold">Created</th>
                       <th class="fw-semibold">Actions</th>
                     </tr>
                   </thead>
                   <tbody>
                     <tr>
-                      <td><span class="badge bg-light text-dark">#ST001</span></td>
+                      <td><span class="badge bg-light text-dark">1</span></td>
                       <td>
-                        <div class="d-flex align-items-center">
-                          <img src="https://via.placeholder.com/40x30/667eea/ffffff?text=PL" class="rounded me-2" alt="League">
-                          <div>
-                            <div class="fw-semibold">Man City vs Arsenal</div>
-                            <small class="text-muted">Premier League</small>
-                          </div>
-                        </div>
+                        <a href="#" class="text-decoration-none">https://example.com/stream1</a>
                       </td>
-                      <td><span class="badge bg-primary">Premier League</span></td>
-                      <td><span class="status-badge bg-success text-white">Active</span></td>
-                      <td>12.5K</td>
-                      <td>2 hours ago</td>
+                      <td><span class="badge bg-danger" style="min-width: 100px;">Website</span></td>
+                      <td>
+                        <div class="fw-semibold">Man City vs Arsenal</div>
+                      </td>
+                      <td>Premier League</td>
+                      <td><span class="badge bg-success text-white" style="min-width: 100px;">Active</span></td>
+                      <td>15 Jan 2024, 20:00</td>
                       <td>
                         <div class="btn-group btn-group-sm">
                           <button class="btn btn-outline-primary">
@@ -339,20 +333,17 @@
                       </td>
                     </tr>
                     <tr>
-                      <td><span class="badge bg-light text-dark">#ST002</span></td>
+                      <td><span class="badge bg-light text-dark">2</span></td>
                       <td>
-                        <div class="d-flex align-items-center">
-                          <img src="https://via.placeholder.com/40x30/f093fb/ffffff?text=LL" class="rounded me-2" alt="League">
-                          <div>
-                            <div class="fw-semibold">Barcelona vs Real Madrid</div>
-                            <small class="text-muted">La Liga</small>
-                          </div>
-                        </div>
+                        <a href="#" class="text-decoration-none">https://facebook.com/live/stream2</a>
                       </td>
-                      <td><span class="badge bg-warning">La Liga</span></td>
-                      <td><span class="status-badge bg-warning text-dark">Pending</span></td>
-                      <td>8.2K</td>
-                      <td>5 hours ago</td>
+                      <td><span class="badge bg-primary" style="min-width: 100px;">Social Media</span></td>
+                      <td>
+                        <div class="fw-semibold">Barcelona vs Real Madrid</div>
+                      </td>
+                      <td>La Liga</td>
+                      <td><span class="badge bg-warning text-dark" style="min-width: 100px;">Pending</span></td>
+                      <td>16 Jan 2024, 21:00</td>
                       <td>
                         <div class="btn-group btn-group-sm">
                           <button class="btn btn-outline-primary">
@@ -368,20 +359,17 @@
                       </td>
                     </tr>
                     <tr>
-                      <td><span class="badge bg-light text-dark">#ST003</span></td>
+                      <td><span class="badge bg-light text-dark">3</span></td>
                       <td>
-                        <div class="d-flex align-items-center">
-                          <img src="https://via.placeholder.com/40x30/f5576c/ffffff?text=BL" class="rounded me-2" alt="League">
-                          <div>
-                            <div class="fw-semibold">Bayern vs Dortmund</div>
-                            <small class="text-muted">Bundesliga</small>
-                          </div>
-                        </div>
+                        <a href="#" class="text-decoration-none">https://youtube.com/watch/stream3</a>
                       </td>
-                      <td><span class="badge bg-danger">Bundesliga</span></td>
-                      <td><span class="status-badge bg-secondary text-white">Inactive</span></td>
-                      <td>15.7K</td>
-                      <td>1 day ago</td>
+                      <td><span class="badge bg-primary" style="min-width: 100px;">Social Media</span></td>
+                      <td>
+                        <div class="fw-semibold">Bayern vs Dortmund</div>
+                      </td>
+                      <td>Bundesliga</td>
+                      <td><span class="badge bg-secondary text-white" style="min-width: 100px;">Inactive</span></td>
+                      <td>14 Jan 2024, 19:30</td>
                       <td>
                         <div class="btn-group btn-group-sm">
                           <button class="btn btn-outline-primary">
