Add feature to manage leagues page

--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
               <i class="bi bi-person-fill text-primary"></i>
             </div>
             <div class="text-white-50 small">Admin User</div>
-            <a href="#" class="nav-link text-white-50 small">
+            <a href="#" class="nav-link text-white-50 small logout">
               <i class="bi bi-box-arrow-right me-1"></i>Logout
             </a>
           </div>
