Add filtering functionality to all pages

--- a/index.html
+++ b/index.html
@@ -916,7 +916,7 @@
       // Set image (using demo.webp for now)
       const viewImage = document.getElementById('viewImage');
       viewImage.src = 'demo.webp';
-      viewImage.alt = `Stream Image - ${matches}`;
+      viewImage.alt = `Stream Image - ${matchesName}`;
       
       // Show modal
       const modal = new bootstrap.Modal(document.getElementById('viewStreamModal'));
